infrastructure/base/networking/httproutes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
spec:
  parentRefs:
    - name: gateway
      namespace: cloudflare-gateway
  hostnames:
    - hubble${clusterServicesDNSSuffix,,}
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
